# python-utils-poscore-client

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  test.yml
src/surquest/utils/poscore/: client.py  credentials.py  errors.py
src/surquest/utils/poscore/models/: __init__.py  campaign_row_installation.py  installation_models.py
src/surquest/utils/poscore/models/blobs/: __init__.py  blob.py
src/surquest/utils/poscore/models/campaigns/: __init__.py  brand.py  campaign.py  campaign_lock.py  campaign_response.py  campaign_row.py  campaign_status.py  carrier.py  company.py  component.py  contact.py  customer_reference.py  partner.py  sales_employee.py
src/surquest/utils/poscore/models/installations/: __init__.py  campaign_row_installation.py  installation_response.py  installation_status_payload.py  location_installation.py
test/: test_client.py  test_credentials.py
